Fix increase font weight for easier viewing on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ h2 {
     left: 50px;
     position: absolute;
     border-radius: 30px;
+    font-weight: bold;
 }
 
 #hero-text-left p {
